@@ -9,6 +9,8 @@ SVN from 0.70:
         - Rebuild: Should now handle non-DMD compilers derived from DMD more
           easily (see ticket #115).
         - Rebuild: Fixed configuration's "include" option (see ticket #116).
+        - Rebuild: Fixed a crash bug with the highly-uncommon pragmas
+          containing declarations (see ticket #117).
 
 0.70 from 0.69:
         - Rebuild: Merged DMD 1.020.
